--- a/notebooks/Code_Explainer.ipynb
+++ b/notebooks/Code_Explainer.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/inactinique/ai_summer_workshop/blob/main/notebooks/Code_Explainer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "1e7b775e-532c-4465-8265-50b4a46cae73",
       "metadata": {
         "id": "1e7b775e-532c-4465-8265-50b4a46cae73"
@@ -121,7 +131,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 369,
+          "height": 389,
           "referenced_widgets": [
             "4be33e00398c47b68ccbd37762e934a7",
             "f334867a83434a6abaa2539c54296ed4",
@@ -709,7 +719,7 @@
         "id": "1c32294d-8607-478b-a9f2-6dd79110fb8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 241
         },
         "outputId": "a7394eff-e11d-4591-86fd-4680451dbc74"
       },
@@ -741,7 +751,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 401,
+          "height": 421,
           "referenced_widgets": [
             "5615d9a7829045afac0266f864ce9176",
             "685a0346989d4556bc6bcc933ccad94e",
@@ -1068,76 +1078,236 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "f3bbcd23-8367-4c64-a2bd-2ea3ac6a66c7",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f3bbcd23-8367-4c64-a2bd-2ea3ac6a66c7",
-        "outputId": "047259dc-d540-4c24-acf9-1f660e4d98b3"
+        "outputId": "103934ea-a6ac-47b1-eda9-27c8416173ca"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Generating explanation of code.\n",
             "--------------------------------------------------\n",
-            "\n"
+            "<>\n",
+            "You are an expert in Python programming. Below is a Python code that describes a task.\n",
+            "Explain the code step by step with details about the implementation in a friendly and chatty way!\n",
+            "<>\n",
+            "\n",
+            "import random\n",
+            "\n",
+            "def create_maze(width, height):\n",
+            "    maze = [['#' for _ in range(width)] for _ in range(height)]\n",
+            "    \n",
+            "    def carve_path(x, y):\n",
+            "        maze[y][x] = ' '\n",
+            "        directions = [(0, 1), (1, 0), (0, -1), (-1, 0)]\n",
+            "        random.shuffle(directions)\n",
+            "        for dx, dy in directions:\n",
+            "            nx, ny = x + dx*2, y + dy*2\n",
+            "            if 0 <= nx < width and 0 <= ny < height and maze[ny][nx] == '#':\n",
+            "                maze[y+dy][x+dx] = ' '\n",
+            "                carve_path(nx, ny)\n",
+            "\n",
+            "    carve_path(1, 1)\n",
+            "    maze[1][0] = 'S'  # Start\n",
+            "    maze[height-2][width-1] = 'E'  # End\n",
+            "    return maze\n",
+            "\n",
+            "def print_maze(maze, player_pos):\n",
+            "    for y, row in enumerate(maze):\n",
+            "        for x, cell in enumerate(row):\n",
+            "            if (x, y) == player_pos:\n",
+            "                print('P', end='')\n",
+            "            else:\n",
+            "                print(cell, end='')\n",
+            "        print()\n",
+            "\n",
+            "def play_maze(maze):\n",
+            "    player_pos = (0, 1)\n",
+            "    while True:\n",
+            "        print_maze(maze, player_pos)\n",
+            "        move = input(\"Move (w/a/s/d): \").lower()\n",
+            "        x, y = player_pos\n",
+            "        if move == 'w' and y > 0 and maze[y-1][x] != '#':\n",
+            "            player_pos = (x, y-1)\n",
+            "        elif move == 's' and y < len(maze)-1 and maze[y+1][x] != '#':\n",
+            "            player_pos = (x, y+1)\n",
+            "        elif move == 'a' and x > 0 and maze[y][x-1] != '#':\n",
+            "            player_pos = (x-1, y)\n",
+            "        elif move == 'd' and x < len(maze[0])-1 and maze[y][x+1] != '#':\n",
+            "            player_pos = (x+1, y)\n",
+            "        \n",
+            "        if maze[player_pos[1]][player_pos[0]] == 'E':\n",
+            "            print(\"Congratulations! You've reached the end!\")\n",
+            "            break\n",
+            "\n",
+            "# Create and play the maze\n",
+            "maze = create_maze(15, 10)\n",
+            "play_maze(maze)\n",
+            " \n",
+            "Alright, let's dive into this fun Python code! We've got a script here that generates a maze, allows you to navigate through it, and even congratulates you when you reach the end. Let's break it down step by step:\n",
+            "\n",
+            "1. First, we import the `random` module, which will help us shuffle the directions when carving the path in the maze.\n",
+            "\n",
+            "```python\n",
+            "import random\n",
+            "```\n",
+            "\n",
+            "2. Next, we define a function called `create_maze(width, height)`. This function creates a 2D list (maze) filled with '#' characters, representing the walls of the maze. The size of the maze is defined by the `width` and `height` parameters.\n",
+            "\n",
+            "```python\n",
+            "def create_maze(width, height):\n",
+            "    maze = [['#' for _ in range(width)] for _ in range(height)]\n",
+            "```\n",
+            "\n",
+            "3. Inside the `create_maze` function, we define another function called `carve_path(x, y)`. This function will carve a path through the maze starting from the given coordinates (x, y).\n",
+            "\n",
+            "```python\n",
+            "    def carve_path(x, y):\n",
+            "        maze[y][x] = ' '\n",
+            "        # ...\n",
+            "```\n",
+            "\n",
+            "4. In the `carve_path` function, we first mark the current cell as empty (represented by a space character). Then, we generate a list of possible directions to move (up, down, left, and right). We shuffle this list using the `random.shuffle()` function to ensure the path is not always the same.\n",
+            "\n",
+            "```python\n",
+            "        directions = [(0, 1), (1, 0), (0, -1), (-1, 0)]\n",
+            "        random.shuffle(directions)\n",
+            "        for dx, dy in directions:\n",
+            "            nx, ny = x + dx*2, y + dy*2\n",
+            "```\n",
+            "\n",
+            "5. For each direction, we check if the next cell (nx, ny) is within the bounds of the maze, is not a wall (#), and if the cell diagonally adjacent to the current cell (the cell we want to carve a path to) is also a wall. If all conditions are met, we carve the path by marking the cell as empty and recursively calling the `carve_path` function for the new cell.\n",
+            "\n",
+            "```python\n",
+            "            if 0 <= nx < width and 0 <= ny < height and maze[ny][nx] == '#':\n",
+            "                maze[y+dy][x+dx] = ' '\n",
+            "                carve_path(nx, ny)\n",
+            "```\n",
+            "\n",
+            "6. After carving the initial path, we set the starting point (S) and the ending point (E) of the maze.\n",
+            "\n",
+            "```python\n",
+            "    carve_path(1, 1)\n",
+            "    maze[1][0] = 'S'  # Start\n",
+            "    maze[height-2][width-1] = 'E'  # End\n",
+            "```\n",
+            "\n",
+            "7. We then define a function called `print_maze(maze, player_pos)` that prints the current state of the maze with the player's position marked as 'P'.\n",
+            "\n",
+            "```python\n",
+            "def print_maze(maze, player_pos):\n",
+            "    for y, row in enumerate(maze):\n",
+            "        for x, cell in enumerate(row):\n",
+            "            if (x, y) == player_pos:\n",
+            "                print('P', end='')\n",
+            "            else:\n",
+            "                print(cell, end='')\n",
+            "        print()\n",
+            "```\n",
+            "\n",
+            "8. Next, we define a function called `play_maze(maze)` that takes the maze as an argument, initializes the player's position, and enters the game loop. In the game loop, it prints the current state of the maze, gets user input for the direction to move, and updates the player's position accordingly. If the player reaches the end (E), it congratulates them and breaks the loop.\n",
+            "\n",
+            "```python\n",
+            "def play_maze(maze):\n",
+            "    player_pos = (0, 1)\n",
+            "    while True:\n",
+            "        print_maze(maze, player_pos)\n",
+            "        move = input(\"Move (w/a/s/d): \").lower()\n",
+            "        x, y = player_pos\n",
+            "        if move == 'w' and y > 0 and maze[y-1][x] != '#':\n",
+            "            player_pos = (x, y-1)\n",
+            "        elif move == 's' and y < len(maze)-1 and maze[y+1][x] != '#':\n",
+            "            player_pos = (x, y+1)\n",
+            "        elif move == 'a' and x > 0 and maze[y][x-1] != '#':\n",
+            "            player_pos = (x-1, y)\n",
+            "        elif move == 'd' and x < len(maze[0])-1 and maze[y][x+1] != '#':\n",
+            "            player_pos = (x+1, y)\n",
+            "\n",
+            "        \n",
+            "        if maze[player_pos[1]][player_pos[0]] == 'E':\n",
+            "            print(\"Congratulations! You've reached the end!\")\n",
+            "            break\n",
+            "```\n",
+            "\n",
+            "9. Finally, we create and play the maze with a call to `create_maze(15, 10)` and `play_maze(maze)`.\n",
+            "\n",
+            "```python\n",
+            "# Create and play the maze\n",
+            "maze = create_maze(15, 10)\n",
+            "play_maze(maze)\n",
+            "```\n",
+            "\n",
+            "Now you can run the script, and you'll have a fun little maze game to play! Enjoy! 😊\n"
           ]
         }
       ],
       "source": [
         "code_example = \"\"\"\n",
-        "import gensim\n",
-        "from gensim import corpora\n",
-        "from gensim.models import LdaModel\n",
-        "from pprint import pprint\n",
+        "import random\n",
         "\n",
-        "# Assuming 'corpus' is a list of documents, where each document is a list of tokens\n",
-        "# If you don't have this, you'll need to preprocess your text data first\n",
+        "def create_maze(width, height):\n",
+        "    maze = [['#' for _ in range(width)] for _ in range(height)]\n",
         "\n",
-        "# Create a dictionary from the corpus\n",
-        "dictionary = corpora.Dictionary(corpus)\n",
+        "    def carve_path(x, y):\n",
+        "        maze[y][x] = ' '\n",
+        "        directions = [(0, 1), (1, 0), (0, -1), (-1, 0)]\n",
+        "        random.shuffle(directions)\n",
+        "        for dx, dy in directions:\n",
+        "            nx, ny = x + dx*2, y + dy*2\n",
+        "            if 0 <= nx < width and 0 <= ny < height and maze[ny][nx] == '#':\n",
+        "                maze[y+dy][x+dx] = ' '\n",
+        "                carve_path(nx, ny)\n",
         "\n",
-        "# Create a document-term matrix\n",
-        "doc_term_matrix = [dictionary.doc2bow(doc) for doc in corpus]\n",
+        "    carve_path(1, 1)\n",
+        "    maze[1][0] = 'S'  # Start\n",
+        "    maze[height-2][width-1] = 'E'  # End\n",
+        "    return maze\n",
         "\n",
-        "# Set parameters for the LDA model\n",
-        "num_topics = 5  # Number of topics to extract\n",
-        "passes = 20     # Number of passes through the corpus during training\n",
-        "iterations = 400  # Number of iterations in each pass\n",
+        "def print_maze(maze, player_pos):\n",
+        "    for y, row in enumerate(maze):\n",
+        "        for x, cell in enumerate(row):\n",
+        "            if (x, y) == player_pos:\n",
+        "                print('P', end='')\n",
+        "            else:\n",
+        "                print(cell, end='')\n",
+        "        print()\n",
         "\n",
-        "# Train the LDA model\n",
-        "lda_model = LdaModel(corpus=doc_term_matrix,\n",
-        "                     id2word=dictionary,\n",
-        "                     num_topics=num_topics,\n",
-        "                     random_state=100,\n",
-        "                     update_every=1,\n",
-        "                     chunksize=100,\n",
-        "                     passes=passes,\n",
-        "                     iterations=iterations,\n",
-        "                     alpha='auto',\n",
-        "                     per_word_topics=True)\n",
+        "def play_maze(maze):\n",
+        "    player_pos = (0, 1)\n",
+        "    while True:\n",
+        "        print_maze(maze, player_pos)\n",
+        "        move = input(\"Move (w/a/s/d): \").lower()\n",
+        "        x, y = player_pos\n",
+        "        if move == 'w' and y > 0 and maze[y-1][x] != '#':\n",
+        "            player_pos = (x, y-1)\n",
+        "        elif move == 's' and y < len(maze)-1 and maze[y+1][x] != '#':\n",
+        "            player_pos = (x, y+1)\n",
+        "        elif move == 'a' and x > 0 and maze[y][x-1] != '#':\n",
+        "            player_pos = (x-1, y)\n",
+        "        elif move == 'd' and x < len(maze[0])-1 and maze[y][x+1] != '#':\n",
+        "            player_pos = (x+1, y)\n",
         "\n",
-        "# Print the topics\n",
-        "print(\"The topics extracted from the corpus are:\")\n",
-        "pprint(lda_model.print_topics())\n",
+        "        if maze[player_pos[1]][player_pos[0]] == 'E':\n",
+        "            print(\"Congratulations! You've reached the end!\")\n",
+        "            break\n",
         "\n",
-        "# Print the top 10 words for each topic\n",
-        "print(\"\\nTop 10 words for each topic:\")\n",
-        "for idx, topic in lda_model.print_topics(-1):\n",
-        "    print(f\"Topic: {idx}\")\n",
-        "    print(\", \".join([word.split(\"*\")[1].strip().replace('\"', '') for word in topic.split(\"+\")[:10]]))\n",
-        "    print()\n",
-        "\n",
-        "# To see the dominant topic for each document\n",
-        "print(\"Dominant topic for each document:\")\n",
-        "for i, doc in enumerate(doc_term_matrix):\n",
-        "    top_topics = lda_model.get_document_topics(doc, minimum_probability=0.0)\n",
-        "    top_topic = max(top_topics, key=lambda x: x[1])\n",
-        "    print(f\"Document {i}: Topic {top_topic[0]} (Probability: {top_topic[1]:.2f})\")\n",
+        "# Create and play the maze\n",
+        "maze = create_maze(15, 10)\n",
+        "play_maze(maze)\n",
         "\"\"\"\n",
         "\n",
         "prompt = f\"\"\"\n",
@@ -1150,7 +1320,7 @@
         "\n",
         "print(f'Generating explanation of code.')\n",
         "# Get the summary of the code\n",
-        "summary = summarize_code(max_new_tokens=256, prompt=prompt)\n",
+        "summary = summarize_code(max_new_tokens=2000, prompt=prompt)\n",
         "\n",
         "print('-'*50)\n",
         "print(summary)"
@@ -1176,7 +1346,8 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "accelerator": "GPU",
     "widgets": {
